<resources>
    <string name="app_name">Tibetan Prayer</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="routine">Routine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_place_holder">This is dummy Title</string>
    <string name="content_place_holder">This is content to be load</string>
    <string name="sno_place_holder">1. </string>
    <string name="prayer_name">Prayer Name</string>
    <string name="option">Option</string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="record_prayer">Record Prayer</string>
    <string name="no_prayer_found">No Prayer Found</string>
    <string name="no_prayer_added">No Routine Prayer Found</string>
    <string name="no_notification">No Notification</string>
    <string name="favourite">Favourite</string>
    <string name="clear_counter">Clear Counter</string>
    <string name="increment">Increment</string>
    <string name="reset">Reset</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="feature_not_available_now">Feature not available now</string>
    <string name="download">Download</string>
    <string name="scroll_icon">Scroll Icon</string>
    <string name="author_name">by Kharag Edition</string>
    <string name="cancel">Cancel</string>
</resources>