<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_container"
    android:background="?android:colorAccent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?android:colorPrimary"
            app:statusBarScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Collapsing"
            android:theme="@style/CollapsingToolbarTheme"
            app:toolbarId="@+id/toolbar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/cover_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />
                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="40dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:textColor="@color/white"
                        android:id="@+id/counter"
                        android:text="1"
                        android:textSize="60sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                app:titleTextColor="@android:color/white"
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:layout_gravity="start"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:background="?android:colorAccent"
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:background="?android:colorAccent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/counter_layout"
                android:background="?android:colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:background="?android:colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:background="?android:colorAccent"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.button.MaterialButton
                            app:icon="@drawable/ic_baseline_add_24"
                            android:id="@+id/increment_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/increment"/>
                        <com.google.android.material.button.MaterialButton
                            app:icon="@drawable/ic_baseline_clear_24"
                            android:id="@+id/reset_btn"
                            android:layout_marginLeft="15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reset"/>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="?android:colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/title_detail"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/title_place_holder"
                        android:textSize="24sp"
                        android:paddingBottom="7dp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/content_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_place_holder"
                        android:textSize="22sp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>



    </androidx.core.widget.NestedScrollView>
    <View
        android:id="@+id/fabBGLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransBg"
        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/fabLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="bottom|right"
        app:rippleColor="#E4D6D6"
        android:clipToPadding="false"
        android:padding="@dimen/standard_12"
        android:visibility="gone">

        <TextView
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_scroll" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:visibility="gone"
        android:id="@+id/scroll_icon"
        android:elevation="10dp"
        android:layout_margin="15dp"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_upward_24"
        android:contentDescription="@string/scroll_icon" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>